--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,63 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+}
+
 plugins {
-    id 'java'
+    id "com.jfrog.bintray" version "1.8.4"
 }
 
 group 'test.maven'
 version '1.0-SNAPSHOT'
 
+allprojects {
+    repositories {
+        jcenter()
+    }
+
+    apply plugin: 'maven'
+    apply plugin: 'maven-publish'
+    apply plugin: 'java'
+}
+
 sourceCompatibility = 1.8
 
-repositories {
-    mavenCentral()
+publishing {
+    publications {
+        MyPublication(MavenPublication) {
+            from components.java
+            groupId 'test.maven'
+            artifactId 'test.maven'
+            version '1.1'
+        }
+    }
+}
+
+bintray {
+    user = 'dantenguyen1008'
+    key = '8a426b7245c967a3835b4eb479304b76df734c7e'
+    publications = ['MyPublication']
+    pkg {
+        repo = 'test_maven'
+        name = 'test_maven'
+        licenses = ['MIT']
+        vcsUrl = 'https://github.com/DanteNguyen1008/test_maven.git'
+
+        version {
+            name = '1.0-Final'
+            desc = 'Gradle Bintray Plugin 1.0 final'
+            released  = new Date()
+            vcsTag = '1.3.0'
+            attributes = ['gradle-plugin': 'com.use.less:com.use.less.gradle:gradle-useless-plugin']
+        }
+    }
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.4'
 }
